# BTC

./: .gitignore  README.md  pyproject.toml
examples/: step1_smoketest.py  step2_backtest_dummyagent.py  step2_backtest_ruleagent.py
src/projectx/agents/: __init__.py  decision.py  dummy_agent.py  interface.py  rule_agent.py
src/projectx/config/: defaults.py  indicator_config.yaml
src/projectx/data/: binance_futures_klines.py  cache.py  sources.py
src/projectx/features/: indicators.py
src/projectx/replay/: window.py
src/projectx/sim/: __init__.py  engine.py  metrics.py  plotting.py  types.py
tests/: test_agent_interface.py  test_indicators.py  test_replay_window.py  test_sim_engine.py  test_sim_engine_trades.py  test_time_utils.py  test_vision_parsing.py
